# cloudhospital

./: .dockerignore  .gitignore  .gitlab-ci.yml  CLAUDE.md  DEPLOY.md  Dockerfile  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  railway.json  turbo.json
.claude/: settings.json
.gitlab/: CODEOWNERS
.gitlab/merge_request_templates/: default.md
apps/patient-portal/: next.config.mjs  package.json
apps/portal/: CLAUDE.md  app.js  index.html  style.css
apps/regulator-portal/: CLAUDE.md  next.config.mjs  package.json
apps/scenario-001-frontend/: CLAUDE.md  Dockerfile  next.config.mjs  package.json  tsconfig.json
apps/scenario-002-frontend/: CLAUDE.md  next.config.mjs  package.json
apps/scenario-006-frontend/: CLAUDE.md  next.config.mjs  package.json  tsconfig.json
apps/scenario-019-frontend/: CLAUDE.md  next.config.mjs  package.json
docs/: 00-开发体系总纲.md  01-环境搭建与ClaudeCode入门.md  02-代码仓库结构.md  03-协作规范-分支与提交.md  04-应用场景开发流程.md  05-代码评审与质量门禁.md  06-CICD与私有化部署.md  07-ClaudeCode进阶-子代理与技能.md  08-数据库设计.md  场景登记表.md
docs/templates/: PR模板.md  scenario-CLAUDE.md
infra/db/: README.md  alembic.ini
infra/db/ddl/: 01_platform_identity.sql  02_platform_clearing.sql  03_scenario_referral.sql  04_platform_patient.sql  05_external_sources.sql  06_referral_full.sql  07_platform_archive.sql  08_scenario_teleconsult.sql  09_platform_iot.sql  10_scenario_homebed.sql  11_homebed_message.sql  12_consent_file.sql  13_scenario_followup.sql
infra/db/migrations/: env.py  script.py.mako
infra/docker/: compose.dev.yml
infra/offline-package/: .env.example  README.md  backup.sh  build-offline.sh  docker-compose.prod.yml  healthcheck.sh  install.sh  restore.sh  upgrade.sh
scripts/: new-scenario.mjs  run-referral-demo.ps1  seed_external.py  start-container.sh  stop-referral-demo.ps1
services/gateway/: CLAUDE.md  Dockerfile  pyproject.toml  routes.json
services/gateway/app/: __init__.py  config.py  identity.py  main.py  proxy.py  routing.py
services/gateway/tests/: test_gateway_flow.py  test_routing.py
services/platform-ai/: CLAUDE.md  pyproject.toml
services/platform-ai/app/: config.py  main.py
services/platform-ai/app/api/: routes.py
services/platform-ai/tests/: test_rule_engine.py
services/platform-archive/: pyproject.toml
services/platform-archive/app/: config.py  db.py  main.py
services/platform-auth/: CLAUDE.md  Dockerfile  pyproject.toml
services/platform-consent/: pyproject.toml
services/platform-consent/app/: config.py  main.py
services/platform-consent/tests/: test_consent.py
services/platform-file/: pyproject.toml
services/platform-iot/: pyproject.toml
services/platform-iot/app/: config.py  main.py
services/platform-iot/tests/: test_iot.py
services/platform-patient/: pyproject.toml
services/scenario-001-backend/: CLAUDE.md  Dockerfile  README.md  pyproject.toml
services/scenario-001-backend/app/: __init__.py  db.py  main.py  models.py
services/scenario-001-backend/app/api/: routes.py
services/scenario-001-backend/app/core/: config.py
services/scenario-001-backend/tests/: test_health.py
services/scenario-002-backend/: CLAUDE.md  Dockerfile  README.md  pyproject.toml
services/scenario-006-backend/: CLAUDE.md  Dockerfile  README.md  pyproject.toml
services/scenario-006-backend/app/: __init__.py  main.py  models.py
services/scenario-006-backend/app/api/: routes.py
services/scenario-006-backend/app/core/: config.py
services/scenario-006-backend/tests/: test_consult.py  test_health.py
services/scenario-019-backend/: CLAUDE.md  Dockerfile  README.md  pyproject.toml
services/scenario-019-backend/app/: __init__.py  db.py  main.py  models.py
services/scenario-019-backend/app/api/: admin.py  clinical.py  mdt.py  routes.py
services/scenario-019-backend/app/core/: config.py
services/scenario-019-backend/scripts/: demo.py
services/scenario-019-backend/tests/: test_credit.py  test_health.py  test_referral.py
(+58 files in other folders)
