[project]
name = "gateway"
version = "0.1.0"
description = "统一网关 · 鉴权/路由/转发"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic-settings>=2.4",
  "httpx>=0.27",
  "py-common",
]

[tool.uv.sources]
py-common = { workspace = true }

[dependency-groups]
dev = ["pytest>=8.3", "mypy>=1.11", "ruff>=0.6"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
