[project]
name = "platform-iot"
version = "0.1.0"
description = "平台服务 · 体征监测（设备实时回传 + 异常判定）"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic-settings>=2.4",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.2",
  "py-common",
]

[tool.uv.sources]
py-common = { workspace = true }

[dependency-groups]
dev = ["pytest>=8.3", "httpx>=0.27", "mypy>=1.11", "ruff>=0.6"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
