[project]
name = "scenario-001-backend"
version = "0.1.0"
description = "在线随访 —— 场景 001 后端"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic-settings>=2.4",
  "py-common",   # 共享库：鉴权/审计/脱敏/日志/DB（workspace 内解析，见根 pyproject）
]

[tool.uv.sources]
py-common = { workspace = true }

[dependency-groups]
dev = ["pytest>=8.3", "httpx>=0.27", "mypy>=1.11", "ruff>=0.6"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
