[project]
name = "scenario-019-backend"
version = "0.1.0"
description = "转诊一件事 —— 场景 019 后端"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic-settings>=2.4",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.2",   # PostgreSQL 驱动（SQLAlchemy 用 postgresql+psycopg 方言）
  "py-common",   # 共享库：鉴权/审计/脱敏/日志/DB（uv workspace 内解析）
]

[tool.uv.sources]
py-common = { workspace = true }

[dependency-groups]
dev = ["pytest>=8.3", "httpx>=0.27", "mypy>=1.11", "ruff>=0.6"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
